# HelloOpenCL

./: CMakeLists.txt  build_linux.sh  build_win32.sh  build_win64.sh
HelloOpenCL/: hello.c  hello.cl
cmake_modules/: FindOpenCL.cmake
